// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor integration test should flow: entered fullscreen 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "type": "EDITOR_MODAL_TOGGLE",
      },
    ],
  ],
  "state": Object {
    "editor": Object {
      "diffViewType": "split",
      "editorName": "editor",
      "errorText": "",
      "hosts": Object {
        "host1": 1,
        "host2": 2,
      },
      "isMasked": false,
      "isMaximized": true,
      "isRendering": true,
      "keyBinding": "Default",
      "mode": "Ruby",
      "readOnly": false,
      "renderedValue": "",
      "selectedView": "preview",
      "showError": false,
      "theme": "Monokai",
      "value": "<? />",
    },
  },
}
`;

exports[`Editor integration test should flow: initial state 1`] = `
Object {
  "editor": Object {
    "diffViewType": "split",
    "editorName": "editor",
    "errorText": "",
    "hosts": Object {
      "host1": 1,
      "host2": 2,
    },
    "isMasked": false,
    "isMaximized": false,
    "isRendering": false,
    "keyBinding": "Default",
    "mode": "Ruby",
    "readOnly": false,
    "renderedValue": "",
    "selectedView": "input",
    "showError": false,
    "theme": "Monokai",
    "value": "<? />",
  },
}
`;

exports[`Editor integration test should flow: switched to preview view 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": "preview",
        "type": "EDITOR_CHANGE_TAB",
      },
    ],
  ],
  "state": Object {
    "editor": Object {
      "diffViewType": "split",
      "editorName": "editor",
      "errorText": "",
      "hosts": Object {
        "host1": 1,
        "host2": 2,
      },
      "isMasked": false,
      "isMaximized": false,
      "isRendering": true,
      "keyBinding": "Default",
      "mode": "Ruby",
      "readOnly": false,
      "renderedValue": "",
      "selectedView": "preview",
      "showError": false,
      "theme": "Monokai",
      "value": "<? />",
    },
  },
}
`;
